--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "stm32f4 drivers add submodules",
+      "label": "stm32f4 drivers add or update submodules",
       "type": "shell",
-      "command": "./scripts/stm32f4_drivers_add_subs.sh",
+      "command": "./scripts/stm32f4_drivers_add_or_update_subs.sh",
     }
   ]
 }
